Replace button with folder, spacing issues

--- a/src/app/pages/common/entity/entity-form/components/form-explorer/form-explorer.component.scss
+++ b/src/app/pages/common/entity/entity-form/components/form-explorer/form-explorer.component.scss
@@ -1,12 +1,25 @@
 .form-explorer {
     margin-bottom: 10px;
-    padding: 10px;
-    width: 90%;
-    max-width: 700px;;
 }
 
-#formexinput {
-    width: 92%;
+#box1 {
+    display: inline-block;
+    width: 10%;
+    max-width: 45px;
+}
+
+#box2 {
+    display: inline-block;
+    width: 80%;
+}
+
+.form-ex-folder {
+    font-size: 36px;
+    vertical-align: -webkit-baseline-middle;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 #formexinput tooltip {
@@ -14,3 +27,56 @@
     left: 28px;
     top: 20px;
 }
+  
+@media screen and (max-width: 768px) {
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .form-explorer {
+        padding: 3px 10px 10px 10px;
+        margin-bottom: 20px;
+    }
+
+    #box1 {
+      order: 2;
+    }
+    #box2 {
+      margin-left: 0;
+      margin-top: 8px;
+      width: 100%;
+      order: 1
+    }
+    
+    #box3 {
+        order: 3;
+    }
+}
+
+// @media screen and (min-width: 1100px) {
+//     #box1 {
+//         width: 13%;
+//     }
+//     #box2 {
+//         width: 86%;
+//     }
+// }
+
+// @media screen and (min-width: 1400px) {
+//     #box1 {
+//         width: 10%;
+//     }
+//     #box2 {
+//         width: 89%;
+//     }
+// }
+
+// @media screen and (min-width: 1650px) {
+//     #box1 {
+//         width: 8%;
+//     }
+//     #box2 {
+//         width: 91%;
+//     }
+// }
